# bella-bot-v2

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DISCORD_OAUTH_SETUP.md  Dockerfile  Procfile  README.md  TROUBLESHOOTING.md  behaviors.json  nixpacks.toml  plan.md  railway.toml  render.yaml  requirements.txt  setup-and-run.ps1  stop.ps1  vercel.json
api/: index.py
bot/: .env  Dockerfile  behaviors.json  pyproject.toml  requirements.txt
bot/bella_bot/: __init__.py  api_server.py  bot.py  config.py  ws.py
bot/bella_bot/commands/: ai_chat.py  image.py  mod.py  music.py
bot/bella_bot/events/: on_message.py  on_voice_state.py
bot/bella_bot/services/: ai_service.py  behavior_service.py  image_service.py  logging_service.py  memory_service.py  music_service.py
infra/: application.yml  docker-compose.yml  readme-deploy.md
lavalink/: application.yml
scripts/: render_start.sh  run.bat  run.sh  run_local.sh  stop_local.sh
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  config.ts  index.css  vite-env.d.ts
web/src/components/: ActivityFeed.tsx  BehaviorSettings.tsx  DiscordCallback.tsx  Header.js  Header.tsx  ImageGenerator.tsx  LoginScreen.tsx  LogsPanel.tsx  QuickActions.tsx  StatsCards.tsx
web/src/hooks/: useBot.js
web/src/pages/: index.js
web/src/styles/: globals.css
web/src/utils/: socket.ts
workers/: Dockerfile  requirements.txt  worker.py
workers/tasks/: ai_task.py  image_task.py
